tests/specialization-conflict.stderr
error: 
   ┌─ test:16:1
   │
 3 │ greet :: A where (Greet A) => A -> Text
   │ ----- expected because the type was annotated here
   ·
16 │ greet :: Bar -> Number
   │ ^^^^^
   │ │
   │ expected `A -> Text` for any type `A`, but found `Bar -> Number`
   │ this constant must have a more specific type than the original constant
   │ this function returns `Number`, but it should return `Text`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

error: 
   ┌─ test:20:1
   │
 3 │ greet :: A where (Greet A) => A -> Text
   │                  --------- required by this bound here
   ·
20 │ greet :: Baz -> Text
   │ ^^^^^
   │ │
   │ could not find instance `Greet Baz`
   │ this constant must satisfy the bounds of the original constant
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

error: 
   ┌─ test:25:7
   │
 3 │ greet :: A where (Greet A) => A -> Text
   │                  --------- required by this bound here
   ·
25 │ show (greet Baz)
   │       ^^^^^ could not find instance `Greet Baz`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

