tests/specialization-conflict.wpl
Greet : A => trait (A -> Text)

greet :: A where (Greet A) => A -> Text
greet : x -> format "Hello, _!" (Greet x)

Foo : type
instance (Greet Foo) : just "Foo"

Bar : type
instance (Greet Bar) : just "Bar"

Baz : type
-- no instance (Greet Baz)

[specialize]
greet :: Bar -> Number
greet : just 42

[specialize]
greet :: Baz -> Text
greet : ...

show (greet Foo)
show (greet Bar)
show (greet Baz)
